kubernetes/apps/manifest-gen/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manifest-gen
  labels:
    istio.io/dataplane-mode: ambient
