kubernetes/apps/manifest-gen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manifest-gen
  namespace: manifest-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manifest-gen
  template:
    metadata:
      labels:
        app: manifest-gen
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: manifest-gen
        image: anantvaid4/manifest-generator-api 
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        securityContext:
          runAsNonRoot: true
