kubernetes/apps/manifest-gen/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: manifest-gen
  namespace: manifest-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manifest-gen
  strategy:
    canary:
      #trafficRouting:
      #  istio:
      #    virtualService: 
      #      name: manifest-gen-vs
      #      routes:
      #      - primary
      #    destinationRule:
      #      name: manifest-gen-dr
      #      canarySubsetName: canary
      #      stableSubsetName: stable
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 50
      - pause: {duration: 30s}
      - setWeight: 100
  template:
    metadata:
      labels:
        app: manifest-gen
        istio.io/dataplane-mode: ambient
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: manifest-gen
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
