kubernetes/apps/manifest-gen/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: manifest-gen-stable
  namespace: manifest-gen
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: manifest-gen
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: manifest-gen-route
  namespace: manifest-gen
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
  hostnames:
  - "manifest.techtalkswithanant.online"
  rules:
  - backendRefs:
    - name: manifest-gen-stable
      port: 80
